Flex component & custom Header

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,6 +5,7 @@
 @import './vars/spacing';
 @import './vars/sizes';
 @import './vars/visibility';
+@import './vars/flex';
 // @import './vars/transitions';
 // @import './vars/borders';
 
