--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,6 +6,7 @@
 @import './vars/sizes';
 @import './vars/visibility';
 @import './vars/flex';
+// @import './global';
 // @import './vars/transitions';
 // @import './vars/borders';
 
