avatar and other styling improvement

--- a/src/components/Task/Task.scss
+++ b/src/components/Task/Task.scss
@@ -1,7 +1,7 @@
 @import '../../scss/variables';
 @import 'bulma/sass/utilities/functions';
 
-$padding: nth(nth($small, 2), 2);
+// $padding: nth(nth($small, 2), 2);
 
 @keyframes loading {
     0% {
